--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,11 @@ section#lojas-ouro {
   margin: 0 10px;
   max-width: 190px;
   font-family: Ropa Sans, sans-serif;
-  border: solid 2px rgb(11, 11, 255);
+  background-color: #c2b112;
 }
 
 .card img {
-  width: 180px;
+  width: 185px;
   height: 90px;
   margin: auto;
 }
@@ -47,11 +47,12 @@ section#lojas-ouro {
   color: #343232;
   font-style: italic;
   max-width: 1440px;
-  max-height: 65px;
+  height: 50px;
   margin: auto;
   padding: 3px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 #localidades-mkp .mkp-local {
