--- a/css/carrossel.css
+++ b/css/carrossel.css
@@ -1,42 +1,42 @@
-
 section.carrossel {
     margin: auto;
     padding: 0;
     display: flex;
     align-items: center;
-  }
-  
-  #carrossel {
+}
+
+#carrossel {
     margin: auto;
+    width: 100%;
     max-width: 1440px;
     height: 410px;
     overflow: hidden;
-  }
+}
 
-  .slider {
+.slider {
     width: 402%;
     height: 410px;
     display: flex;
-  }
+}
 
-  .slider input {
+.slider input {
     display: none;
-  }
+}
 
-  .slide {
+.slide {
     width: 25%;
     position: relative;
     transition: 3s;
-  }
+}
 
 .navigation-manual {
     position: absolute;
-    width: 1440px;
+    width: 100%;
     padding: 0;
     margin: auto auto -380px auto;
     display: flex;
     justify-content: center;
-  }
+}
 
 .destaque-manual {
     border: 2px solid gold;
@@ -54,19 +54,19 @@ section.carrossel {
     background-color: antiquewhite;
 }
 
-#radio1:checked ~ .primeiroSlide {
+#radio1:checked~.primeiroSlide {
     margin-left: 0;
 }
 
-#radio2:checked ~ .primeiroSlide {
+#radio2:checked~.primeiroSlide {
     margin-left: -25%;
 }
 
-#radio3:checked ~ .primeiroSlide {
+#radio3:checked~.primeiroSlide {
     margin-left: -50%;
 }
 
-#radio4:checked ~ .primeiroSlide {
+#radio4:checked~.primeiroSlide {
     margin-left: -75%;
 }
 
@@ -79,30 +79,76 @@ section.carrossel {
 }
 
 .navigation-auto {
-    width: 1440px;
+    width: 100%;
     margin: 388px auto;
     position: absolute;
     display: flex;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .navigation-auto div:not(:last-child) {
     margin-right: 40px;
 }
 
-#radio1:checked ~ .navigation-auto .destaque1 {
+#radio1:checked~.navigation-auto .destaque1 {
     background-color: antiquewhite;
 }
 
-#radio2:checked ~ .navigation-auto .destaque2 {
+#radio2:checked~.navigation-auto .destaque2 {
     background-color: antiquewhite;
 }
 
-#radio3:checked ~ .navigation-auto .destaque3 {
+#radio3:checked~.navigation-auto .destaque3 {
     background-color: antiquewhite;
 }
 
-#radio4:checked ~ .navigation-auto .destaque4 {
+#radio4:checked~.navigation-auto .destaque4 {
     background-color: antiquewhite;
 }
 
+/* CSS Responsivo para Tablet e Smartphone Small */
+/* Tablet */
+@media(max-width: 768px) {
+
+    #carrossel {
+        height: 210px;
+    }
+
+    #carrossel img {
+        width: 768px;
+        height: 210px;
+    }
+
+    .navigation-manual {
+        margin: auto auto -180px auto;
+    }
+
+    .navigation-auto {
+        margin: 188px auto;
+    }
+
+}
+
+
+/* SmartPhones M */
+@media(max-width: 320px) {
+
+    #carrossel {
+        margin-right: 4px;
+        height: 130px;
+    }
+
+    #carrossel img {
+        width: 320px;
+        height: 130px;
+    }
+
+    .navigation-manual {
+        margin: auto auto -100px auto;
+    }
+
+    .navigation-auto {
+        margin: 108px auto;
+    }
+
+}
