--- a/css/main.css
+++ b/css/main.css
@@ -16,21 +16,21 @@ main {
 }
 
 section#lojas-ouro {
-  padding: 15px;
-  margin: 0 2px;
+  margin: 10px 2px;
+  flex-wrap: wrap;
   display: flex;
   justify-content: center;
 }
 
 .card {
-  margin: 0 10px;
-  max-width: 190px;
+  margin: 10px;
+  max-width: 180px;
   font-family: Ropa Sans, sans-serif;
   background-color: #c2b112;
 }
 
 .card img {
-  width: 185px;
+  width: 100%;
   height: 90px;
   margin: auto;
 }
@@ -71,25 +71,37 @@ a:visited {
   color: #343232;
 }
 
+/* CSS Responsivo para Tablet e Smartphone pequeno */
+/* Tablet */
+@media(max-width: 768px) {
 
-/* Tablet
-@media(max-width: 768px) {}
-
-/* SmartPhones M *
-@media(max-width: 480px) {}*/
-
-/* @media(max-width: 683px) {
-  
-  footer {
-    display: block;
-    text-align: center;
-  }  
-
-  section {
-    padding: 0px;
+  section#lojas-ouro {
+    justify-content: center;
   }
 
   .card {
-    margin: auto;
+    margin: 5px 5px;
   }
-} */
+}
+
+/* SmartPhones Small */
+@media(max-width: 320px) {
+
+  section#lojas-ouro {
+    justify-content: center;
+  }
+
+  .card {
+    margin: 5px 5px;
+  }
+
+  #localidades-mkp {
+    height: auto;
+    margin: auto;
+    padding: 3px;
+    display: block;
+    text-align: center;
+    font-size: 10px;
+  }
+
+}
