--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap');
 
 * {
   margin: 0;
@@ -25,7 +25,7 @@ section#lojas-ouro {
 .card {
   margin: 10px;
   max-width: 180px;
-  font-family: Ropa Sans, sans-serif;
+  font-family: 'Goldman', cursive;
   background-color: #c2b112;
 }
 
