--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: fredoka, serif;  
+  font-family: "Goldman", serif;  
 }
 
 body {
