--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,13 @@ section#lojas-ouro {
   background-color: #c2b112;
 }
 
+.card:hover {
+  background-color: rgb(132, 132, 247);
+  border: solid 5px blue;
+  border-radius: 10px;
+  height: auto;
+}
+
 .card img {
   width: 100%;
   height: 90px;
